@@ -64,6 +64,20 @@ Description: Libraries necessary to run Ruby 2.2
  This package includes the 'libruby-2.2' library, necessary to run Ruby 2.2.
  (API version 2.2.0)
 
+Package: libruby2.2-dbg
+Section: debug
+Multi-Arch: same
+Architecture: any
+Depends: libruby2.2 (= ${binary:Version}),
+         ${misc:Depends}
+Description: Debugging symbols for libruby2.2
+ Ruby is the interpreted scripting language for quick and easy
+ object-oriented programming.  It has many features to process text
+ files and to do system management tasks (as in perl).  It is simple,
+ straight-forward, and extensible.
+ .
+ This package includes the debugging symbols for the 'libruby-2.2' library.
+
 Package: ruby2.2-dev
 Multi-Arch: same
 Architecture: any
